全体のコメント修正

--- a/html-main/html-main.html
+++ b/html-main/html-main.html
@@ -1,8 +1,8 @@
 <!-- 
-  --gamebook-main
-  --Yusuke Kato
-  --start: 9.6.2016
-  --last : 9.7.2016
+  ==gamebook-main
+  ==Yusuke Kato
+  ==start: 9.6.2016
+  ==last : 9.7.2016
   -->
 
 <!DOCTYPE html>
