--- a/html-main/GameBook1/gamebook1.html
+++ b/html-main/GameBook1/gamebook1.html
@@ -1,8 +1,8 @@
 <!-- 
-  --gamebook1
-  --Yusuke Kato
-  --start: 9.6.2016
-  --last : 9.7.2016
+  ==gamebook1
+  ==Yusuke Kato
+  ==start: 9.6.2016
+  ==last : 9.7.2016
   -->
 
 <!DOCTYPE html>
