--- a/html-main/GameBook1/gamebook1.html
+++ b/html-main/GameBook1/gamebook1.html
@@ -9,33 +9,61 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>WebGame  -YK-</title>
-    <link rel="stylesheet" href="css-main.css">
+    <title>ティンクエスト２  -YK-</title>
+    <link rel="stylesheet" href="gamebook1.css">
 </head>
 <body>
     <h3>start: 9.6.2016</h3>
     <h3>last : 9.7.2016</h3>
-    <h1>WebGame</h1>
+    <h1 class="text-color">ティンクエスト２</h1>
     <h3>--- Yusuke Kato ---</h3>
     <h2>ゲームブック風ゲーム</h2>
     <h3>＜説明＞</h3>
     <ul>
         <li>３つの選択肢から行動を選ぼう！！</li>
-        <li>ステージは１００まで！！</li>
         <li>クリア条件を満たせばクリア！！</li>
+        <li>ゲームオーバーもあるから気をつけてね！！</li>
     </ul>
-    <p>=---------=---------=---------=---------=---------=</p>
-    <h3 id="stage" class="stage-color">STAGE:1</h3>
-    <h3 id="text" class="text-color">Game Start</h3>
-    <h3 id="text1" class="text-color">1:</h3>
-    <h3 id="text2" class="text-color">2:</h3>
-    <h3 id="text3" class="text-color">3:</h3>
-    <p>=---------=---------=---------=---------=---------=</p>
-    <button id="flag1">1</button>
-    <button id="flag2">2</button>
-    <button id="flag3">3</button>
-    <button id="Go">GO</button>
+    <h3>＜流れ＞</h3>
+    <ol>
+        <li>右のストーリーテキストを読もう！！</li>
+        <li>下のボタンで選択肢３つから行動を選ぼう！！</li>
+        <li>選んだら、GOボタンを押そう！！</li>
+        <li>イベントが発生するよ！！</li>
+        <li>クリアを目指そう！！！</li>
+    </ol>
+    <div id="panel">
+        <h3 id="stage" class="stage-color">STAGE:0 --- 物語の始まり ---</h3>
+        <p>=---------=---------=---------=---------=---------=</p>
+        <p id="text" class="text-color">ティンクエスト２</p>
+        <p id="text1" class="text-color">あなたは主人公ティンクとなり、</p>
+        <p id="text2" class="text-color">この世界を旅することになるだろう。</p>
+        <p id="text3" class="text-color">あなたの選択がティンクを、そして世界を変える。</p>
+        <p>=---------=---------=---------=---------=---------=</p>
+    </div>
+    <div id="panel2">
+        <h3 id="name">ティンク</h3>
+        <p id="hp-text">体力 : 10</p>
+        <p id="ef-text">実力 :  4</p>
+        <p id="mo-text">財産 :  7</p>
+    </div>
+    <div id="panel3">
+        <h3 id="name2">魔女マジョミ</h3>
+        <p id="p1-text1">魔力 : 70</p>
+        <p id="p1-text2">外見 : 6</p>
+        <p id="p1-text3">友好 : 2</p>
+    </div>
+    <div id="panel4">
+        <h3 id="name3">田中</h3>
+        <p id="p2-text1">性格 : 87</p>
+        <p id="p2-text2">財産 : 5</p>
+        <p id="p3-text3">料理 : 93</p>
+    </div>
+    <button id="flag1" class="button">1</button>
+    <button id="flag2" class="button">2</button>
+    <button id="flag3" class="button">3</button>
+    <button id="Go" class="gobutton">GO</button>
     <h3 id="flag">選択：0</h3>
-    <script src="JS-main.js"></script>
+    <script src="gamebook1.js"></script>
 </body>
 </html>
