--- a/html-main/GameBook1/gamebook1.html
+++ b/html-main/GameBook1/gamebook1.html
@@ -44,8 +44,8 @@
     <div id="panel2">
         <h3 id="name">ティンク</h3>
         <p id="hp-text">体力 : 10</p>
-        <p id="ef-text">実力 :  4</p>
-        <p id="mo-text">財産 :  7</p>
+        <p id="pp1text">実力 :  4</p>
+        <p id="pp2text">財産 :  7</p>
     </div>
     <div id="panel3">
         <h3 id="name2">魔女マジョミ</h3>
