--- a/html-main/GameBook1/gamebook1.html
+++ b/html-main/GameBook1/gamebook1.html
@@ -2,7 +2,7 @@
   ==gamebook1
   ==Yusuke Kato
   ==start: 9.6.2016
-  ==last : 9.7.2016
+  ==last : 9.9.2016
   -->
 
 <!DOCTYPE html>
@@ -14,50 +14,56 @@
 </head>
 <body>
     <h3>start: 9.6.2016</h3>
-    <h3>last : 9.7.2016</h3>
-    <h1 class="text-color">ティンクエスト２</h1>
+    <h3>last : 9.9.2016</h3>
+    <h1 class="text-color">ティンクエスト</h1>
     <h3>--- Yusuke Kato ---</h3>
     <h2>ゲームブック風ゲーム</h2>
     <h3>＜説明＞</h3>
     <ul>
-        <li>３つの選択肢から行動を選ぼう！！</li>
+        <li>エンドは１～１０まで！！</li>
         <li>クリア条件を満たせばクリア！！</li>
-        <li>ゲームオーバーもあるから気をつけてね！！</li>
+        <li>ゲームオーバーもあるよ！！</li>
     </ul>
     <h3>＜流れ＞</h3>
     <ol>
         <li>右のストーリーテキストを読もう！！</li>
         <li>下のボタンで選択肢３つから行動を選ぼう！！</li>
         <li>選んだら、GOボタンを押そう！！</li>
-        <li>イベントが発生するよ！！</li>
-        <li>クリアを目指そう！！！</li>
     </ol>
     <div id="panel">
-        <h3 id="stage" class="stage-color">STAGE:0 --- 物語の始まり ---</h3>
+        <h3 id="stage" class="stage-color">ティンクエスト</h3>
         <p>=---------=---------=---------=---------=---------=</p>
-        <p id="text" class="text-color">ティンクエスト２</p>
-        <p id="text1" class="text-color">あなたは主人公ティンクとなり、</p>
-        <p id="text2" class="text-color">この世界を旅することになるだろう。</p>
-        <p id="text3" class="text-color">あなたの選択がティンクを、そして世界を変える。</p>
+        <p id="text" class="text-color">！！ゲームスタート！！</p>
+        <p id="text1" class="text-color">「GO」ボタンを押してください。</p>
+        <p id="text2" class="text-color">困ったら、とりあえず「GO」ボタンを押せば良いです。</p>
+        <p id="text3" class="text-color">では、暇つぶし程度にどうぞ！！</p>
+        <p>=---------=---------=---------=---------=---------=</p>
+        <p id="messege" class="text-color2">メッセージ　：　ゲームがはじまります。</p>
         <p>=---------=---------=---------=---------=---------=</p>
     </div>
     <div id="panel2">
         <h3 id="name">ティンク</h3>
         <p id="hp-text">体力 : 10</p>
-        <p id="pp1text">実力 :  4</p>
-        <p id="pp2text">財産 :  7</p>
+        <p id="textPra1"></p>
+        <p id="textPra2"></p>
+        <p id="textPra3"></p>
+        <p id="textPra4"></p>
     </div>
     <div id="panel3">
-        <h3 id="name2">魔女マジョミ</h3>
-        <p id="p1-text1">魔力 : 70</p>
-        <p id="p1-text2">外見 : 6</p>
-        <p id="p1-text3">友好 : 2</p>
+        <h3 id="name2">取得</h3>
+        <p id="p1-text1"></p>
+        <p id="p1-text2"></p>
+        <p id="p1-text3"></p>
+        <p id="p1-text4"></p>
+        <p id="p1-text5"></p>
     </div>
     <div id="panel4">
-        <h3 id="name3">田中</h3>
-        <p id="p2-text1">性格 : 87</p>
-        <p id="p2-text2">財産 : 5</p>
-        <p id="p3-text3">料理 : 93</p>
+        <h3 id="name3">仲間</h3>
+        <p id="p2-text1"></p>
+        <p id="p2-text2"></p>
+        <p id="p2-text3"></p>
+        <p id="p2-text4"></p>
+        <p id="p2-text5"></p>
     </div>
     <button id="flag1" class="button">1</button>
     <button id="flag2" class="button">2</button>
